--- a/SpaceWay/Views/Flights/Index.cshtml
+++ b/SpaceWay/Views/Flights/Index.cshtml
@@ -9,13 +9,13 @@
 }
 else
 {
-    <div class="container">
-        <div class="row">
+    <div class="container mt-5">
+        <div class="row mt-5">
             <div class="col">
                 <h4>Flights</h4>
             </div>
         </div>
-        <div class="row">
+        <div class="row mt-5">
             <div class="col-2">
                 @Html.ActionLink("Display Aircraft Capacity Status", "JoinFlightsAndAircrafts")
             </div>
