--- a/SpaceWay/Views/Flights/SearchFlight.cshtml
+++ b/SpaceWay/Views/Flights/SearchFlight.cshtml
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-offset-2 col-md-10">
+                <div class="col text-center">
                     <div class="form-group">
                         <br />
                         <input type="button" id="fakeSubmit" onclick="load();" value="Search Flight" class="btn btn-default" />
