--- a/SpaceWay/Views/Passengers/Delete.cshtml
+++ b/SpaceWay/Views/Passengers/Delete.cshtml
@@ -9,71 +9,82 @@
 }
 else
 {
-    <h2>Delete</h2>
 
-    <h3>Are you sure you want to delete this?</h3>
-    <div>
-        <h4>Passenger</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Name)
-            </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Name)
-            </dd>
+    <div class="container">
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Username)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Username)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Password)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Password)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Stars)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Stars)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.IsAdmin)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.IsAdmin)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.TotalDistance)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.TotalDistance)
-            </dd>
-
-        </dl>
-
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
+        <div class="row">
+            <div class="col">
+                <h4>Delete Passenger</h4>
             </div>
-        }
+        </div>
+        <hr />
+        <div class="row">
+            <div class="col">
+
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Name)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Username)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Username)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Password)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Password)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Stars)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Stars)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.IsAdmin)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.IsAdmin)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.TotalDistance)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.TotalDistance)
+                    </dd>
+
+                </dl>
+            </div>
+            <div class="col text-center">
+                <h4>Are you sure you want to delete this?</h4>
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="form-actions no-color">
+                        <input type="submit" value="Delete" class="btn btn-default" /> |
+                        @Html.ActionLink("Back to List", "Index")
+                    </div>
+                }
+            </div>
+        </div>
     </div>
 }
