--- a/SpaceWay/Views/Passengers/Details.cshtml
+++ b/SpaceWay/Views/Passengers/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
 
 <div>
-    <h4>Passenger</h4>
+    <h4>Passenger Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -57,10 +56,12 @@
         <dd>
             @Html.DisplayFor(model => model.TotalDistance)
         </dd>
+        <dd>
 
+            <p>
+                @Html.ActionLink("Edit", "Edit", new { id = Model.PassengerID }) |
+                @Html.ActionLink("Back to List", "Index")
+            </p>
+        </dd>
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.PassengerID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
