--- a/SpaceWay/Views/Reservations/Delete.cshtml
+++ b/SpaceWay/Views/Reservations/Delete.cshtml
@@ -3,70 +3,84 @@
 @{
     ViewBag.Title = "Delete";
 }
+@if ((string)Session["isAdmin"] == "0" || Session["Username"] == null)
+{
+    <h4>You have no permissions to display this page.</h4>
+}
+else
+{
+    <div class="container">
+        <div class="row">
+            <div class="col">
 
-<h2>Delete</h2>
+                
+                <div>
+                    <h4>Reservation Delete</h4>
+                    <hr />
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Passenger.Name)
+                        </dt>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Reservation</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Passenger.Name)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.Passenger.Name)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Passenger.Name)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.OrderDate)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.OrderDate)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.OrderDate)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.OutboundID)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.OutboundID)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.OutboundID)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.OutboundID)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.InboundID)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.InboundID)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.InboundID)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.InboundID)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.NumOfTickets)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NumOfTickets)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.NumOfTickets)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.NumOfTickets)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.TotalPrice)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalPrice)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.TotalPrice)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.TotalPrice)
-        </dd>
+                    </dl>
 
-    </dl>
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+                    <div class="form-actions no-color">
+                        <h4>Are you sure you want to delete this?</h4>
+                        <input type="submit" value="Delete" class="btn btn-default" /> |
+                        @Html.ActionLink("Back to List", "Index")
+                    </div>
+                    }
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
-</div>
+                </div>
+                </div>
+                </div>
+                </div>
+}
