--- a/SpaceWay/Views/Reservations/Payment.cshtml
+++ b/SpaceWay/Views/Reservations/Payment.cshtml
@@ -38,13 +38,13 @@
             </dt>
             <dd>
                 <br /><br />
-                <input type="text" name="creditcard" title="Credit Card" style="color:#888;"
+                <input type="tel" name="creditcard" title="Credit Card" style="color:#888;"
                        value="enter card digits here" onfocus="inputFocus(this)" onblur="inputBlur(this)" />
             </dd>
         </dl>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+    <div class="row">
+        <div class="col">
             <input type="submit" value="Complete Purchase" class="btn btn-default" />
         </div>
     </div>
