--- a/SpaceWay/Views/Shared/LoggedInNavBar.cshtml
+++ b/SpaceWay/Views/Shared/LoggedInNavBar.cshtml
@@ -17,7 +17,7 @@
 </li>
 
 <li class="nav-item">
-    <a class="nav-link js-scroll-trigger" href='#'><font color="white">@welcomeText</font></a>
+    <a class="nav-link js-scroll-trigger" href='#'><b><font color="DarkCyan">@welcomeText</font></b></a>
 </li>
 
 <li class="nav-item">
@@ -50,12 +50,14 @@
 </li>
 @if (checkAdmin() == false)
 {
-    <li class="nav-item">
+<li class="nav-item">
+    <div class="col-mt-3">
         <a class="nav-link js-scroll-trigger" href='@Url.Action("MyReservations", "Reservations")'>My Reservations</a>
-    </li>
+        </div>
+</li>
 }
 <li class="nav-item">
-    <a class="nav-link js-scroll-trigger" href='@Url.Action("Nasa", "Home")'>Pic Of The Day</a>
+    <a class="nav-link js-scroll-trigger" href='@Url.Action("Nasa", "Home")'>Nasa</a>
 </li>
 <li class="nav-item">
     <a class="nav-link js-scroll-trigger" href='@Url.Action("Logout", "Passengers")'>Logout</a>
